// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBalance renders correctly 1`] = `
.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c3 {
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.c2 {
  margin: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c1 {
  margin: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 0;
  }
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Bitcoin
  </p>
  <p
    className="c2"
  >
    1526.56 
    <abbr
      className="c3"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</section>
`;

exports[`CardBalance renders correctly with a badge 1`] = `
.c1 {
  padding: 0.125rem 0.4375rem;
  font-size: 0.5rem;
  line-height: 1.25;
  font-weight: 700;
  text-transform: uppercase;
  text-align: center;
  border-radius: 6.25rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

.c2 > li {
  list-style-type: none;
}

.c2 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c5 {
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.c4 {
  margin: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c3 {
  margin: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c2 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c2 > * + * {
    margin-top: 0;
  }
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 1rem;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 1rem;
  }
}

<div
  className="c0"
>
  <span>
    <span
      className="c1"
    >
      Active
    </span>
  </span>
  <section
    className="c2"
  >
    <p
      className="c3"
    >
      Bitcoin
    </p>
    <p
      className="c4"
    >
      1526.56 
      <abbr
        className="c5"
        title="Millibitcoin"
      >
        mBTC
      </abbr>
    </p>
  </section>
</div>
`;

exports[`CardBalance renders with currency if no unitTitle provided 1`] = `
.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c3 {
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.c2 {
  margin: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c1 {
  margin: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 0;
  }
}

<section
  className="c0"
>
  <p
    className="c1"
  >
    Bitcoin
  </p>
  <p
    className="c2"
  >
    1526.56 
    <abbr
      className="c3"
      title="Bitcoin"
    >
      mBTC
    </abbr>
  </p>
</section>
`;
